# oneshot

./: .gitignore  README.md  pyproject.toml
oneshot/: dogs_vs_cats.py  text_pretrained.py  text_pretrained_faiss.py
tests/: test_oneshot.py
